src/forward_pass/tests/snapshots/dobutsu_shogi_2024__forward_pass__tests__initial_search_node_allegiance_inverted_partially_built_is_correct.snap
---
source: src/forward_pass/tests/mod.rs
expression: "SearchNode::initial().into_builder().invert_active_player().build_without_horizontal_normalization().pretty()"
---
|---|                |---|
|GLE|                |GLE|
|*C*|                |*C*|
|*c*|                |*c*|
|elg|                |elg|
|---|                |---|
next_action: active_lion to r0c0
