src/forward_pass/tests/snapshots/dobutsu_shogi_2024__forward_pass__tests__initial_search_node_child0_children_are_correct.snap
---
source: src/forward_pass/tests/mod.rs
expression: "format!(\"parent:\\n{child0}\\n\\nchildren:\\n{children}\")"
---
parent:
|---|                |---|
|G*E|                |GLE|
|*CL|                |*C*|
|*c*|                |lc*|
|elg|                |e*g|
|---|                |---|
next_action: active_lion to r0c0

children:
SearchNodeSet(len = 4) [
    0:
    |---|                |---|
    |G*E|                |G*E|
    |*CL|                |*CL|
    |lc*|                |lc*|
    |e*g|                |e*g|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
    1:
    |---|                |---|
    |G*E|                |G*E|
    |LC*|                |*CL|
    |lc*|                |*cl|
    |e*g|                |e*g|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
    2:
    |---|                |---|
    |GLE|                |G*E|
    |***|                |*cL|
    |lC*|                |***|
    |e*g|                |elg|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
    3:
    |---|                |---|
    |*LE|                |G*E|
    |GC*|                |*CL|
    |lc*|                |*cg|
    |e*g|                |el*|
    |---|                |---|
    next_action: active_lion to r0c0
    ==========================
]
