src/forward_pass/tests/snapshots/dobutsu_shogi_2024__forward_pass__tests__initial_search_node_horizontally_flipped_is_correct.snap
---
source: src/forward_pass/tests/mod.rs
expression: "SearchNode::initial().into_builder().horizontally_flip().pretty()"
---
|---|                |---|
|ELG|                |ELG|
|*C*|                |*C*|
|*c*|                |*c*|
|gle|                |gle|
|---|                |---|
next_action: active_lion to r0c0
