src/forward_pass/tests/snapshots/dobutsu_shogi_2024__forward_pass__tests__initial_search_node_with_initialized_next_action.snap
---
source: src/forward_pass/tests/mod.rs
expression: "SearchNode::initial().into_builder().init_next_action().pretty()"
---
|---|                |---|
|GLE|                |GLE|
|*C*|                |*C*|
|*c*|                |*c*|
|elg|                |elg|
|---|                |---|
next_action: active_lion to r0c0
